RESOLVED FIXED80756
Touch event handler count is not updated when adding handlers to the window.
https://bugs.webkit.org/show_bug.cgi?id=80756
Summary Touch event handler count is not updated when adding handlers to the window.
Sadrul Habib Chowdhury
Reported 2012-03-10 04:15:32 PST
Touch event handler count is not updated when adding handlers to the window.
Attachments
Patch (21.18 KB, patch)
2012-03-10 04:18 PST, Sadrul Habib Chowdhury
no flags
Patch (21.55 KB, patch)
2012-03-12 09:40 PDT, Sadrul Habib Chowdhury
no flags
Sadrul Habib Chowdhury
Comment 1 2012-03-10 04:18:28 PST
Sadrul Habib Chowdhury
Comment 2 2012-03-10 04:20:42 PST
This is a similar fix to http://trac.webkit.org/changeset/106839, except instead of wheel-event handlers, this fix is for touch-event handlers.
Sadrul Habib Chowdhury
Comment 3 2012-03-12 09:40:36 PDT
Sadrul Habib Chowdhury
Comment 4 2012-03-12 09:41:32 PDT
Comment on attachment 131338 [details] Patch Updated the ChangeLog entries to be more descriptive.
WebKit Review Bot
Comment 5 2012-03-12 11:28:57 PDT
Comment on attachment 131338 [details] Patch Clearing flags on attachment: 131338 Committed r110448: <http://trac.webkit.org/changeset/110448>
WebKit Review Bot
Comment 6 2012-03-12 11:29:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.