Touch event handler count is not updated when adding handlers to the window. https://bugs.webkit.org/show_bug.cgi?id=80756

Source/WebCore:

Touch event handlers added to the window needs to be included when counting the number of touch event
handlers. This makes touch event handler counting identical to wheel event handler counting.

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-03-12
Reviewed by Anders Carlsson.

Test: fast/events/touch/touch-handler-count.html

* dom/EventNames.h:
(EventNames):
(WebCore::EventNames::isTouchEventType):
* dom/Node.cpp:
(WebCore):
(WebCore::tryAddEventListener):
(WebCore::tryRemoveEventListener):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::addEventListener):
(WebCore::DOMWindow::removeEventListener):
* testing/Internals.cpp:
(WebCore::Internals::touchEventHandlerCount):
(WebCore):
* testing/Internals.h:
(Internals):
* testing/Internals.idl:

LayoutTests:

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-03-12
Reviewed by Anders Carlsson.

The new layout tests add and remove touch event handlers on the window, document, and a div in the
document, and tests that the count is updated correctly when handlers are added and/or removed.

* fast/events/touch/touch-handler-count-expected.txt: Added.
* fast/events/touch/touch-handler-count.html: Added.

Canonical link: https://commits.webkit.org/98038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110448 268f45cc-cd09-0410-ab3c-d52691b4dbfc